--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/sarai3te/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Edmundegh/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/Dinobybt/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Dominickryj/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Earnesteg6/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/Domenicrte/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Dinorahdf7/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230248.md#1" target="_blank">激励员工 如何拿捏“恩威并施”的正确比例</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230248.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13230267-Employees-e1628910496635-700x420-150x120.jpg" align ="left"></a>作为领导者，你很快就会发现，如果你给员工适当的奖励，大多数人会更愿意，做你要求他们做的事情。心理学和经济学上都支持“轻推理论”（nudge theory）这种方法，其中包括提出积极的替代方案，并使领导者避免使用负面高压手段，因为那根本行不通。尽管如此，有时在所有的奖励都失败了之后，您就必须祭出众所周知的惩戒，来制定一些.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 11:49 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226489.md#1" target="_blank">珀斯上财年Hillarys区房产浏览量最高</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226489.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13226497-d00a48567835efda901f3c3e2829f94a-150x120.jpg" align ="left"></a>最近西澳房地产协会（REIWA）发布了上财年该网站待售房产浏览量最高的前十名地区名单，其中Hillarys区位居榜首。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 11:47 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13236124.md#1" target="_blank">【重播】全球大规模实验：口罩阻挡病毒测试</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13236124.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13236297-9.15.21-web-Health-Live-150x120.jpg" align ="left"></a>美国FDA科学家：普通人不需要打第三剂疫苗！科学家为何反对施打第三剂？
+
+全球大规模实验，口罩阻挡病毒测试！
+
+最新研究：未接种疫苗的儿童，感染后的死亡风险低于已经完全接种？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 8:13 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13220612.md#1" target="_blank">夫妻从不吵架就没有冲突？化解冲突之钥</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13220612.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13014789-shutterstock_1938419236-150x120.jpg" align ="left"></a>一对夫妻表明他们从不吵架，我说：“那你们就也不亲近了。”冲突是人性。回避冲突其实是在向蛮横霸道靠近，而不是向和平共处靠近。冲突本身不是牢笼，把人困住的是常用来应付冲突的僵化思维。铸成僵化思维之牢的铁条可能很难辨认，因为它们往往镀上了一层好意。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 7:36 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235655.md#1" target="_blank">英国少女救了熊蜂一命 此后两者形影不离</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235655.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235664-blossom-2204795_1920-150x120.jpg" align ="left"></a>英国西米德兰兹郡（West Midlands）一名少女意外救了一只熊蜂，结果这只熊蜂变成了“跟屁虫”，一直缠着它的恩人，不愿意离开。该名少女于是收养熊蜂当宠物，每天与它形影不离，连睡觉都在一起。或许这是因为他们很有缘分吧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 6:20 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235397.md#1" target="_blank">何时知道自己上了年纪？ 网民这么说</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235397.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235410-bushes-4429589_1920-150x120.jpg" align ="left"></a>Reddit网站用户“spp25”日前发起话题“你何时正式得知你再也不年轻了？”，邀请其他用户分享自己的经验。以下摘译一部分用户的回复，看看上了年纪的读者会不会“心有戚戚焉”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 3:02 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235106.md#1" target="_blank">小狗闯入板球比赛抢球 获封本月最佳球员</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13235106.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235115-golden-retriever-750592_1920-150x120.jpg" align ="left"></a>在爱尔兰于9月11日举行的一场女子板球比赛中，一只小狗闯入球场将球叼走，并在球场里四处奔跑，导致比赛中断。整个过程让球评看得哈哈大笑。这只小狗不但抢尽锋头，还因其“优异”表现被国际板球理事会（International Cricket Council）开玩笑地封为本月最佳球员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 1:10 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13212260.md#1" target="_blank">成功教养历程：解救沉迷电子产品的孩子</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13212260.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13214819-shutterstock_436983679-150x120.jpg" align ="left"></a>“我为什么要听你的？”“你不要管我！”“为什么大人就可以？”当我们要孩子学习自律，缩减电脑游戏或使用手机的时间，得到的却是反抗的回应，该怎么办？千万记住不要用强制、恐吓或威胁的语气，这样会让孩子更叛逆，只有站在孩子这一方体会他们的需要，理解他们的处境才能有效化解亲子危机。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 8:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229803.md#1" target="_blank">水果变黑、变烂？2种情况可以吃</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229803.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13230716-shutterstock2_1924791083-150x120.jpg" align ="left"></a>发现水果变烂，有些人可能会舍不得丢，认为削掉腐烂部位后，应该还能吃。营养师高敏敏指出，得看是什么因素使水果变烂，才知道能不能将剩下的水果吃下肚。另外水果可以分为更性及非更性，更性是指在水果还没成熟时即可被采收，因更性水果含有“乙烯”会帮助自己催熟。如果摆放过熟，就很容易腐败， 这时即便放进冰箱也是没有用的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 6:42 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13232012.md#1" target="_blank">按摩脚底4部位 改善更年期症状、调整自律神经</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13232012.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13233905-shutterstock_1958863198-150x120.jpg" align ="left"></a>更年期时，容易出现血气上涌、晕眩、头痛、倦怠、失眠、低落、焦躁等各式各样的症状。脚底按摩可以改善这些更年期出现的不适。刺激对于防止晕眩有效的三叉神经穴道，可以调整荷尔蒙平衡的自律神经及卵巢穴道，对于失眠有效的失眠点穴道来改善症状。另外，若有血液循环不良，可能与身上穿的内衣裤有关。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 6:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13233510.md#1" target="_blank">清洁窗户六个步骤 玻璃明净无痕</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13233510.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13233519-living-space-windows-20210817-700x420-150x120.jpeg" align ="left"></a>干净的窗户和肮脏的窗户，对比是明显的。没有条痕和污垢的窗户，可以让人享受户外景致，也能让阳光直接洒进家里。但很多人都不愿意做这项工作，因为他们不知道如何清洁窗户。其实只需要一点规划和一点努力就可以了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 4:40 AM			</td></tr>
@@ -32,13 +44,5 @@
 在全美房地产降温之际，旧金山湾区房市似乎全然脱序，继续往前冲！八月份湾区房市销售量虽然再次滑落，但价格却比七月更高昂，从旧金山、中半岛到南湾、东湾，几乎八成九成的售价都比要价高，而全美市场平均仅半数会高于要价。
 
 八月销售量比七月下滑7.6%，销售价格上涨3.2%（见表一），今年六月时价格达到高.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 9:37 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226218.md#1" target="_blank">安眠药千万别乱吃！三类人不宜服用</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226218.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13226942-shutterstock_756787537-150x120.jpg" align ="left"></a>安眠药有哪些副作用？以下为四种常见的安眠药：1.苯二氮平类药物（BZD）；2.非苯二氮平类药物（Non-BZD）；3.三环抗忧郁剂（TCA）；4.褪黑激素受体致效剂（MT Agonist）。其中，苯二氮平类药物（BZD）会影响记忆，不宜长期服用。孕妇、银发族、夜间上班者则不宜吃安眠药。患者应找出失眠的真正原因。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 8:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227635.md#1" target="_blank">藏身英国女子的胸罩里 小壁虎旅行几千公里</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227635.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13227637-gekko-4430899_1920-150x120.jpg" align ="left"></a>英国南约克郡（South Yorkshire）一名女子刚结束加勒比海的旅程回到家里。当她打开行李箱时，赫然发现一只小壁虎藏在她的胸罩里，跟她一起旅行了几千公里。尽管这个“偷渡客”在行李箱里待了很长的一段时间，但它看起来似乎没有受伤或被压扁，还活得好好的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 5:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/10/n13224265.md#1" target="_blank">没有衣柜也能收纳 开放式衣柜的创意收纳术</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/10/n13224265.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13227535-shutterstock_793004389-150x120.jpg" align ="left"></a>现代人的居住空间有限，如果不想因为衣柜占用了大部分的空间，或居住的空间没有衣柜，可以采用开放式衣柜，移动式衣橱、简易伸缩吊杆甚至床下收纳。然后以有系统的收纳，让衣柜看起来整齐又美观。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 3:24 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227503.md#1" target="_blank">杭州13岁女孩被逼每天跳绳3000下 为求长高</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227503.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13227510-shutterstock_1727032519-150x120.jpg" align ="left"></a>大陆浙江省杭州市一名妈妈为了让13岁的女儿长高一点，每天要求她跳绳3,000下，结果导致她膝盖出现剧痛，经医生检查才知道，她罹患了“胫骨粗隆骨骺炎”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 2:12 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13214305.md#1" target="_blank">气味比味道更重要 让狗狗开心吃饱4要点</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13214305.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_173143076-150x120.jpg" align ="left"></a>让狗狗觉得“这个好像很好吃、我要吃这个”的关键就在于“闻起来的气味”。不知道大家帮狗狗换新饲料时，是不是会看到它不断嗅来嗅去，一确认气味后立刻转头不吃呢？这是因为它确认气味后，判断这是自己不爱的食物。狗狗喜欢“脂肪味”、感觉有很多肉的气味，此外湿热食物的香气比干冷食物还要浓郁、强烈，所以也更受狗狗的青睐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 11:39 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227184.md#1" target="_blank">疫苗接种率100% 也无法抵御Delta变种？</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227184.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13227307-GettyImages-1233641298-150x120.jpg" align ="left"></a>自疫情爆发以来，各国政府一直把希望寄托于全民施打疫苗，以形成群体免疫控制疫情。然而近日，日本主流媒体《产经新闻》发表一篇文章指出，由于Delta变种的传播力太强、疫苗效力下降，如今即使所有人都接种疫苗，也无法形成群体免疫。日本厚生劳动大臣（即卫生部长及劳动部长）田村宪久更表示，疫苗已经不是王牌。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 9:39 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227291.md#1" target="_blank">如何让房屋翻修成为双赢项目</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13227291.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/apartment-2094666_960_720-150x120.jpg" align ="left"></a>在从零开始建造一所房屋，并翻修了几所房屋之后，我深刻地认识到，与建筑工人保持良好沟通是房屋翻修取得成功的关键因素。沟通过程中可能会丢失很多信息：有时工人没有在听你说话，或者你没有很好地表达自己的想法，或你的想法很模糊，可能被误解……以下是一些与建筑商或工人沟通的要点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 9:25 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226553.md#1" target="_blank">没人陪伴很寂寞？别依赖他人填补内心空洞</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226553.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13226587-shutterstock_155430077_-150x120.jpg" align ="left"></a>有时候“寂寞”与“没人陪伴”可能没什么关联，寂寞是在自己在心中筑起了一道高高的墙。纵然身处人群，仍可能内心倍感寂寞，一味任由他人决定自身的心情实在是不可靠，毕竟人与人的关系会改变，不要作茧自缚、不要自我设限。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 9:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008_3.htm">https://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
